cmake_minimum_required(VERSION 3.27)
project(WaveAnalyse)

set(CMAKE_CXX_STANDARD 20)

add_executable(WaveAnalyse main.cpp)
#        wav/WavData.cpp
#        wav/WavData.hpp
#        wav/chunk/Chunck.cpp
#        wav/chunk/Chunk.hpp
#        wav/chunk/RiffChunck.cpp
#        wav/chunk/RiffChunck.hpp)
